refactor: migrate HTTP requests to Java 11 HttpClient
New public API:
- GsonUtil.getPrettyGson -> a Gson instance with pretty printing
- interface ViaPlatform now extends Executor, to make it work with CompletableFuture. `execute` implementation is delegated to `runAsync`.
- HttpClientUtil provides some shortcut for JSON response handling and HttpClient constructing.

Breaking changes:
- GsonUtil now has no public constructor